Fixing layout issue in footer widgets - if only one area has widgets, make sure they stay in the correct locations. Fixes #433.

--- a/rtl.css
+++ b/rtl.css
@@ -461,11 +461,11 @@ input[type="checkbox"] {
 
 	/* Footer */
 
-	.site-footer .widget-column {
+	.site-footer .widget-column.footer-widget-1 {
 		float: right;
 	}
 
-	.site-footer .widget-column:last-child {
+	.site-footer .widget-column.footer-widget-2 {
 		float: left;
 	}
 
